feat: fasilitas detail

--- a/fasilitas-tambahan/science-center.html
+++ b/fasilitas-tambahan/science-center.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Panggung Utama - Gedong Budaya Sabilulungan</title>
+  <title>Science Center - Gedong Budaya Sabilulungan</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -69,20 +69,20 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="../assets/img/panggung/1-panggung.jpg" alt="" data-aos="fade-in">
+      <img src="../assets/img/science/1-science-center.jpg" alt="" data-aos="fade-in">
 
       <div class="container-fluid">
         <div class="row justify-content-between align-items-center">
           <div class="col-3 d-flex justify-content-center align-items-center">
-            <a class="circle-btn" href="/fasilitas/ruang-rias">
+            <a class="circle-btn" href="/fasilitas-tambahan/dome-balerame">
               <i class="bi bi-arrow-left"></i>
             </a>
           </div>
           <div class="col-6 text-center">
-            <h1 data-aos="fade-up" data-aos-delay="100">Panggung Utama</h1>
+            <h1 data-aos="fade-up" data-aos-delay="100">Science Center</h1>
           </div>
           <div class="col-3 d-flex justify-content-center align-items-center">
-            <a class="circle-btn" href="/fasilitas/ruang-pertemuan">
+            <a class="circle-btn" href="/fasilitas-tambahan/taman-kaulinan-barudak">
               <i class="bi bi-arrow-right"></i>
             </a>
           </div>
@@ -93,11 +93,6 @@
 
     <section class="section w-100 p-0">
       <img src="../assets/img/addon/bg-fasillity.png" alt="" class="w-100" data-aos="fade-in">
-
-      <div class="d-flex justify-content-center align-items-center flex-column text-center">
-        <h1 class="text-dakr poppins fw-bold fs-1" data-aos="fade-up" data-aos-delay="100">Rp. 17.500.000</h1>
-      </div>
-
     </section>
 
     <!-- Features Section -->
@@ -106,53 +101,109 @@
         <div class="row gy-4 align-items-center features-item">
           <div class="col-lg-5 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
             <p>
-              Panggung utama Gedong Budaya Sabilulungan merupakan fasilitas inti yang dirancang untuk menampilkan
-              pertunjukan seni, teater, konser, seminar, dan acara budaya resmi lainnya. Dilengkapi dengan teknologi
-              pencahayaan dan tata suara profesional
+              Science Center Sabilulungan (SCS) adalah tempat wisata edukatif interaktif yang menghadirkan pengalaman
+              belajar yang menyenangkan.
+            </p>
+            <p>
+              Dirancang untuk anak-anak, remaja, guru, dan keluarga, SCS menggabungkan ilmu
+              pengetahuan, budaya, dan teknologi dalam satu ruang edukatif yang penuh kejutan.
             </p>
           </div>
           <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
             <div class="image-stack">
-              <img src="../assets/img/panggung/2-panggung.jpg" alt="" class="stack-front">
-              <img src="../assets/img/panggung/3-panggung.jpg" alt="" class="stack-back">
+              <img src="../assets/img/science/2-science-center.jpg" alt="" class="stack-front">
+              <img src="../assets/img/science/3-science-center.jpg" alt="" class="stack-back">
             </div>
           </div>
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
           <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
-            <img src="../assets/img/panggung/4-panggung.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/science/9-science-center.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3>FASILITAS & SPESIFIKASI</h3>
+            <h3>Apa Saja yang Bisa Kamu Nikmati?</h3>
             <ul>
-              <li><i class="bi bi-dot"></i><span>Kapasitas ±840 orang</span></li>
-              <li><i class="bi bi-dot"></i><span>Sound System Profesional</span></li>
-              <li><i class="bi bi-dot"></i><span>Lighting Stage & Lampu Sorot 2.500</span></li>
-              <li><i class="bi bi-dot"></i><span>LED Display 6m x 11m</span></li>
-              <li><i class="bi bi-dot"></i><span>Panggung Hidrolik 1m x 2m</span></li>
-              <li><i class="bi bi-dot"></i><span>Panggung Hidrolik 1m x 2m</span></li>
-              <li><i class="bi bi-dot"></i><span>Gun Smoke</span></li>
-              <li><i class="bi bi-dot"></i><span>Meja Dorong</span></li>
-              <li><i class="bi bi-dot"></i><span>Daya Listrik 40.000 Watt</span></li>
+              <li>
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 14 14">
+                  <path fill="currentColor" fill-rule="evenodd"
+                    d="m3.096.577l5.91-.003v2.303l-5.91.003a1.25 1.25 0 0 1-.742-.243l-.958-.707a.25.25 0 0 1 0-.402L2.355.82a1.25 1.25 0 0 1 .74-.244Zm8.343 2.298l-1.183.001V.573h1.187c.634.01 1.119.573 1.119 1.15c0 .578-.485 1.142-1.119 1.152zm-5.931 2.31c.335.134.62.281.867.427V14a5.5 5.5 0 0 0-1.24-.7c-.735-.294-1.795-.537-3.412-.537a.5.5 0 0 1-.5-.5V5.075a.5.5 0 0 1 .5-.5c1.72 0 2.91.259 3.785.61M8.864 13.3c-.54.217-.919.466-1.24.699V5.611c.247-.146.533-.293.868-.427c.875-.351 2.065-.61 3.785-.61a.5.5 0 0 1 .5.5v7.188a.5.5 0 0 1-.5.5c-1.617 0-2.677.243-3.413.538"
+                    clip-rule="evenodd" />
+                </svg>
+                <span class="ms-3">
+                  Zona Edukasi Sains Lebih dari 3000 buku dan alat peraga interaktif dari
+                  fisika, kimia, biologi, hingga astronomi.
+                </span>
+              </li>
+
+              <li>
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24">
+                  <path fill="currentColor"
+                    d="M4 15h2a2 2 0 0 1 2 2v2h1v-2a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2h1v-2a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2h1v3H1v-3h1v-2a2 2 0 0 1 2-2m7-8l4 3l-4 3zM4 2h16a2 2 0 0 1 2 2v9.54a3.9 3.9 0 0 0-2-.54V4H4v9c-.73 0-1.41.19-2 .54V4a2 2 0 0 1 2-2" />
+                </svg>
+                <span class="ms-3">
+                  Bioskop 4D Dilengkapi kacamata 4D dan kursi bergerak otomatis untuk pengalaman menonton yang nyata.
+                </span>
+              </li>
+
+              <li>
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 14 14">
+                  <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                    d="m5 .5l2 2l2-2M.5 9l2-2l-2-2M9 13.5l-2-2l-2 2M13.5 5l-2 2l2 2m-10-5.5L5 5m0 4l-1.5 1.5m7-7L9 5m0 4l1.5 1.5M7 2.5v9M2.5 7h9"
+                    stroke-width="1" />
+                </svg>
+                <span class="ms-3">
+                  Zona Kutub AR Simulasi lingkungan kutub dengan suhu dingin dan teknologi Augmented Reality.
+                </span>
+              </li>
+
+              <li>
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 256 256">
+                  <path fill="currentColor"
+                    d="M208 56h-27.72l-13.63-20.44A8 8 0 0 0 160 32H96a8 8 0 0 0-6.65 3.56L75.71 56H48a24 24 0 0 0-24 24v112a24 24 0 0 0 24 24h160a24 24 0 0 0 24-24V80a24 24 0 0 0-24-24m-44 76a36 36 0 1 1-36-36a36 36 0 0 1 36 36" />
+                </svg>
+                <span class="ms-3">
+                  Spot Foto Instalasi edukatif dan kreatif yang cocok untuk foto dan media sosial.
+                </span>
+              </li>
+
             </ul>
           </div>
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
           <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3>COCOK DIGUNAKAN UNTUK</h3>
+            <h3>Harga Tiket Masuk</h3>
+            <p>
+              Kami menyediakan paket reguler dengan harga yang terjangkau dan fasilitas lengkap
+            </p>
             <ul>
-              <li><i class="bi bi-dot"></i><span>Pertunjukan seni & budaya</span></li>
-              <li><i class="bi bi-dot"></i><span>Konser musik</span></li>
-              <li><i class="bi bi-dot"></i><span>Seminar, talkshow, workshop</span></li>
-              <li><i class="bi bi-dot"></i><span>Acara korporat & peluncuran produk</span></li>
-              <li><i class="bi bi-dot"></i><span>Festival & pameran tematik</span></li>
+              <li class="d-flex align-items-center mb-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24">
+                  <circle cx="12" cy="6" r="2" fill="currentColor" />
+                  <path fill="currentColor"
+                    d="M14 9h-4a1 1 0 0 0-.8.4l-3 4l1.6 1.2L9 13v7h2v-4h2v4h2v-7l1.2 1.6l1.6-1.2l-3-4A1 1 0 0 0 14 9" />
+                </svg>
+                <span class="ms-2">Anak-anak: Rp 25.000 / orang</span>
+              </li>
+
+              <li class="d-flex align-items-center mb-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24">
+                  <path fill="currentColor"
+                    d="M10 22v-7H8V9q0-.825.588-1.412T10 7h4q.825 0 1.413.588T16 9v6h-2v7zm2-16q-.825 0-1.412-.587T10 4t.588-1.412T12 2t1.413.588T14 4t-.587 1.413T12 6" />
+                </svg>
+                <span class="ms-2">Dewasa: Rp 30.000 / orang</span>
+              </li>
             </ul>
-            <a href="javascript:void(0)" class="btn btn-get-started align-self-start" data-tempat="Panggung Utama">Sewa Sekarang</a>
+            <p class="fw-bold">Sudah Termasuk</p>
+            <ul>
+              <li><i class="text-dark bi bi-check"></i><span>Akses Science Center</span></li>
+              <li><i class="text-dark bi bi-check"></i><span>Tiket Bioskop 4D</span></li>
+              <li><i class="text-dark bi bi-check"></i><span>Alat Peraga Sains</span></li>
+            </ul>
           </div>
           <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
-            <img src="../assets/img/panggung/5-panggung.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/dome/4-dome.jpg" class="img-fluid" alt="">
           </div>
         </div><!-- Features Item -->
 
