--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <img src="assets/img/pertemuan/2-pertemuan.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
               <div>
-                <h4 class="title"><a href="javascript:;" class="stretched-link">Ruang VIP</a></h4>
+                <h4 class="title"><a href="fasilitas/ruang-vip" class="stretched-link">Ruang VIP</a></h4>
                 <p class="description">menghadirkan kenyamanan dan fasilitas lengkap
                   untuk berbagai aktivitas formal dan komunitas.</p>
               </div>
@@ -228,7 +228,7 @@
                 <img src="assets/img/vip/3-vip.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
               <div>
-                <h4 class="title"><a href="javascript:;" class="stretched-link">Ruang Pertemuan</a></h4>
+                <h4 class="title"><a href="fasilitas/ruang-pertemuan" class="stretched-link">Ruang Pertemuan</a></h4>
                 <p class="description">memberikan pengalaman terbaik bagi
                   tamu kehormatan, pembicara, atau tokoh penting
                   dalam sebuah acara</p>
@@ -244,7 +244,7 @@
                 <img src="assets/img/selasar/7-selasar.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
               <div>
-                <h4 class="title"><a href="javascript:;" class="stretched-link">Selasar</a></h4>
+                <h4 class="title"><a href="fasilitas/selasar" class="stretched-link">Selasar</a></h4>
                 <p class="description">area semi-outdoor yang luas dan fleksibel</p>
               </div>
             </div>
@@ -258,7 +258,7 @@
                 <img src="assets/img/rias/1-rias.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
               <div>
-                <h4 class="title"><a href="javascript:;" class="stretched-link">Ruang Rias</a></h4>
+                <h4 class="title"><a href="fasilitas/ruang-rias" class="stretched-link">Ruang Rias</a></h4>
                 <p class="description">disediakan khusus untuk menunjang kenyamanan
                   performer dan talent sebelum tampil</p>
               </div>
@@ -289,10 +289,10 @@
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="100">
             <div class="service-item d-flex">
               <div class="icon flex-shrink-0">
-                <img src="assets/img/science/2-science-center.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
+                <img src="assets/img/science/1-science-center.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
               <div>
-                <h4 class="title"><a href="javascript:;" class="stretched-link">Science Center</a></h4>
+                <h4 class="title"><a href="fasilitas-tambahan/science-center.html" class="stretched-link">Science Center</a></h4>
                 <p class="description">Ruang edukatif interaktif yang memperkenalkan ilmu pengetahuan secara
                   menyenangkan, cocok untuk anak anak dan pelajar</p>
               </div>
@@ -308,7 +308,7 @@
                 <img src="assets/img/taman-k/1-taman.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
               <div>
-                <h4 class="title"><a href="javascript:;" class="stretched-link">Taman Kaulinan Barudak</a></h4>
+                <h4 class="title"><a href="fasilitas-tambahan/taman-kaulinan-barudak.html" class="stretched-link">Taman Kaulinan Barudak</a></h4>
                 <p class="description">Area bermain outdoor bernuansa tradisional Sunda yang aman dan edukatif untuk
                   anak-anak.</p>
               </div>
@@ -323,7 +323,7 @@
                 <img src="assets/img/art/4-art.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
               <div>
-                <h4 class="title"><a href="javascript:;" class="stretched-link">3D Art Gallery</a></h4>
+                <h4 class="title"><a href="fasilitas-tambahan/3d-art-gallery.html" class="stretched-link">3D Art Gallery</a></h4>
                 <p class="description">Galeri seni visual dengan instalasi 3D yang unik dan instagramable, cocok untuk
                   berswafoto dan eksplorasi kreatif.</p>
               </div>
@@ -338,7 +338,7 @@
                 <img src="assets/img/foodcourt/1-foodcourt.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
               <div>
-                <h4 class="title"><a href="javascript:;" class="stretched-link">Foodcourt</a></h4>
+                <h4 class="title"><a href="fasilitas-tambahan/foodcourt.html" class="stretched-link">Foodcourt</a></h4>
                 <p class="description">Aneka pilihan kuliner dalam satu area nyaman yang cocok untuk bersantai</p>
               </div>
             </div>
@@ -352,7 +352,7 @@
                 <img src="assets/img/taman-l/2-taman-l.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
               <div>
-                <h4 class="title"><a href="javascript:;" class="stretched-link">Taman Lembayung Senja</a></h4>
+                <h4 class="title"><a href="fasilitas-tambahan/taman-lembayung-senja.html" class="stretched-link">Taman Lembayung Senja</a></h4>
                 <p class="description">Taman dengan suasana tenang dan pemandangan sore yang indah, cocok untuk
                   relaksasi dan foto-foto.</p>
               </div>
@@ -368,7 +368,7 @@
                 <img src="assets/img/dome/4-dome.jpg" alt="fasility-img" class="img-fluid" loading="lazy">
               </div>
               <div>
-                <h4 class="title"><a href="javascript:;" class="stretched-link">Dome Balerame</a></h4>
+                <h4 class="title"><a href="fasilitas-tambahan/dome-balerame.html" class="stretched-link">Dome Balerame</a></h4>
                 <p class="description">area
                   semi-outdoor
                   berkapasitas besar yang berada dalam kompleks
@@ -454,7 +454,7 @@
               <img src="assets/img/rias/2-rias.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dome">
-              <img src="assets/img/dome/3-dome.jpg" class="img-fluid" alt="">
+              <img src="assets/img/dome/2-dome.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-acara">
@@ -470,9 +470,37 @@
               <img src="assets/img/selasar/3-selasar.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dome">
-              <img src="assets/img/dome/1-dome.jpg" class="img-fluid" alt="">
+              <img src="assets/img/dome/3-dome.jpg" class="img-fluid" alt="">
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-acara">
+              <img src="assets/img/acara/4-acara.jpg" class="img-fluid" alt="">
+            </div><!-- End Portfolio Item -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-panggung">
+              <img src="assets/img/panggung/4-panggung.jpg" class="img-fluid" alt="">
+            </div><!-- End Portfolio Item -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-vip">
+              <img src="assets/img/vip/4-vip.jpg" class="img-fluid" alt="">
+            </div><!-- End Portfolio Item -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-selasar">
+              <img src="assets/img/selasar/4-selasar.jpg" class="img-fluid" alt="">
+            </div><!-- End Portfolio Item -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dome">
+              <img src="assets/img/dome/4-dome.jpg" class="img-fluid" alt="">
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-acara">
+              <img src="assets/img/acara/5-acara.jpg" class="img-fluid" alt="">
+            </div><!-- End Portfolio Item -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-panggung">
+              <img src="assets/img/panggung/5-panggung.jpg" class="img-fluid" alt="">
+            </div><!-- End Portfolio Item -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-vip">
+              <img src="assets/img/vip/5-vip.jpg" class="img-fluid" alt="">
+            </div><!-- End Portfolio Item -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-selasar">
+              <img src="assets/img/selasar/5-selasar.jpg" class="img-fluid" alt="">
+            </div><!-- End Portfolio Item -->
           </div><!-- End Portfolio Container -->
 
         </div>
@@ -600,13 +628,11 @@
       <div class="container">
         <div class="row align-items-center">
 
-          <div class="col-lg-5 info py-3 px-2" data-aos="fade-up" data-aos-delay="100"
+          <div class="col-lg-5 info py-5 px-3" data-aos="fade-up" data-aos-delay="100"
             style="background-color: #ffffffec;">
             <h3 class="red-text">Apa Kata Mereka</h3>
             <p>
               Cerita dari mereka yang pernah bikin acara seru di GBS
-            </p>
-            <p>
               Yuk simak pengalaman mereka!
             </p>
           </div>
@@ -717,7 +743,7 @@
         <h2>Hubungi Kami</h2>
       </div><!-- End Section Title -->
 
-      <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
+      <div class="container-lg" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4">
 
@@ -725,7 +751,8 @@
 
             <div class="row gy-4 align-items-stretch">
               <div class="col-md-6 h-100">
-                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade" data-aos-delay="200">
+                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade"
+                  data-aos-delay="200">
                   <i class="bi bi-geo-alt"></i>
                   <h3>Alamat</h3>
                   <p> Jl. Al-Fathu No.104, Pamekaran, Kec. Soreang, Kabupaten Bandung</p>
@@ -734,7 +761,8 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-6 h-100">
-                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade" data-aos-delay="300">
+                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade"
+                  data-aos-delay="300">
                   <i class="bi bi-instagram"></i>
                   <h3>Instagram</h3>
                   <p>@Gedongbudayasabilulungan</p>
@@ -742,7 +770,8 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-6 h-100">
-                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade" data-aos-delay="400">
+                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade"
+                  data-aos-delay="400">
                   <i class="bi bi-envelope"></i>
                   <h3>Email</h3>
                   <small>GedongBudayaSabilulungan<br>@gmail.com</small>
@@ -750,7 +779,8 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-6 h-100">
-                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade" data-aos-delay="300">
+                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade"
+                  data-aos-delay="300">
                   <i class="bi bi-tiktok"></i>
                   <h3>Tiktok</h3>
                   <p>@Gedongbudayasabilulungan</p>
@@ -758,7 +788,8 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-6 h-100">
-                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade" data-aos-delay="300">
+                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade"
+                  data-aos-delay="300">
                   <i class="bi bi-telephone"></i>
                   <h3>Telepon</h3>
                   <p>+62 822 1851 4666</p>
@@ -767,7 +798,8 @@
               </div><!-- End Info Item -->
 
               <div class="col-md-6 h-100">
-                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade" data-aos-delay="300">
+                <div class="info-item h-100 d-flex flex-column justify-content-between" data-aos="fade"
+                  data-aos-delay="300">
                   <i class="bi bi-youtube"></i>
                   <h3>YouTube</h3>
                   <p>Gedong Budaya Sabilulungan</p>
@@ -869,9 +901,9 @@
             <span class="sitename">Gedong Budaya Sabililulungan</span>
           </a>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-youtube"></i></a>
-            <a href=""><i class="bi bi-tiktok"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
+            <a href="https://www.youtube.com/@GedongBudayaSabilulungan-j3b"><i class="bi bi-youtube"></i></a>
+            <a href="https://www.tiktok.com/@gedongbudayasabilulungan"><i class="bi bi-tiktok"></i></a>
+            <a href="https://www.instagram.com/gbs_kabbdg"><i class="bi bi-instagram"></i></a>
           </div>
         </div>
 
