--- a/fasilitas-tambahan/taman-lembayung-senja.html
+++ b/fasilitas-tambahan/taman-lembayung-senja.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Panggung Utama - Gedong Budaya Sabilulungan</title>
+  <title>Taman Lembayung Senja - Gedong Budaya Sabilulungan</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -69,20 +69,20 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="../assets/img/panggung/1-panggung.jpg" alt="" data-aos="fade-in">
+      <img src="../assets/img/taman-l/1-taman-l.jpg" alt="" data-aos="fade-in">
 
       <div class="container-fluid">
         <div class="row justify-content-between align-items-center">
           <div class="col-3 d-flex justify-content-center align-items-center">
-            <a class="circle-btn" href="/fasilitas/ruang-rias">
+            <a class="circle-btn" href="/fasilitas-tambahan/foodcourt">
               <i class="bi bi-arrow-left"></i>
             </a>
           </div>
           <div class="col-6 text-center">
-            <h1 data-aos="fade-up" data-aos-delay="100">Panggung Utama</h1>
+            <h1 data-aos="fade-up" data-aos-delay="100">Taman Lembayung Senja</h1>
           </div>
           <div class="col-3 d-flex justify-content-center align-items-center">
-            <a class="circle-btn" href="/fasilitas/ruang-pertemuan">
+            <a class="circle-btn" href="/fasilitas-tambahan/dome-balerame">
               <i class="bi bi-arrow-right"></i>
             </a>
           </div>
@@ -93,11 +93,6 @@
 
     <section class="section w-100 p-0">
       <img src="../assets/img/addon/bg-fasillity.png" alt="" class="w-100" data-aos="fade-in">
-
-      <div class="d-flex justify-content-center align-items-center flex-column text-center">
-        <h1 class="text-dakr poppins fw-bold fs-1" data-aos="fade-up" data-aos-delay="100">Rp. 17.500.000</h1>
-      </div>
-
     </section>
 
     <!-- Features Section -->
@@ -106,53 +101,40 @@
         <div class="row gy-4 align-items-center features-item">
           <div class="col-lg-5 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
             <p>
-              Panggung utama Gedong Budaya Sabilulungan merupakan fasilitas inti yang dirancang untuk menampilkan
-              pertunjukan seni, teater, konser, seminar, dan acara budaya resmi lainnya. Dilengkapi dengan teknologi
-              pencahayaan dan tata suara profesional
+              Taman Lembayung Senja adalah salah satu dari dua taman di kawasan Gedong Budaya Sabilulungan yang
+              dirancang khusus untuk para penikmat senja.
             </p>
           </div>
           <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
             <div class="image-stack">
-              <img src="../assets/img/panggung/2-panggung.jpg" alt="" class="stack-front">
-              <img src="../assets/img/panggung/3-panggung.jpg" alt="" class="stack-back">
+              <img src="../assets/img/taman-l/2-taman-l.jpg" alt="" class="stack-front">
+              <img src="../assets/img/taman-l/1-taman-l.jpg" alt="" class="stack-back">
             </div>
           </div>
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
           <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
-            <img src="../assets/img/panggung/4-panggung.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/taman-l/4-taman-l.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3>FASILITAS & SPESIFIKASI</h3>
-            <ul>
-              <li><i class="bi bi-dot"></i><span>Kapasitas ±840 orang</span></li>
-              <li><i class="bi bi-dot"></i><span>Sound System Profesional</span></li>
-              <li><i class="bi bi-dot"></i><span>Lighting Stage & Lampu Sorot 2.500</span></li>
-              <li><i class="bi bi-dot"></i><span>LED Display 6m x 11m</span></li>
-              <li><i class="bi bi-dot"></i><span>Panggung Hidrolik 1m x 2m</span></li>
-              <li><i class="bi bi-dot"></i><span>Panggung Hidrolik 1m x 2m</span></li>
-              <li><i class="bi bi-dot"></i><span>Gun Smoke</span></li>
-              <li><i class="bi bi-dot"></i><span>Meja Dorong</span></li>
-              <li><i class="bi bi-dot"></i><span>Daya Listrik 40.000 Watt</span></li>
-            </ul>
+            <p>
+              Taman ini menawarkan pemandangan matahari terbenam yang indah dan suasana yang menenangkan.
+            </p>
           </div>
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
           <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3>COCOK DIGUNAKAN UNTUK</h3>
-            <ul>
-              <li><i class="bi bi-dot"></i><span>Pertunjukan seni & budaya</span></li>
-              <li><i class="bi bi-dot"></i><span>Konser musik</span></li>
-              <li><i class="bi bi-dot"></i><span>Seminar, talkshow, workshop</span></li>
-              <li><i class="bi bi-dot"></i><span>Acara korporat & peluncuran produk</span></li>
-              <li><i class="bi bi-dot"></i><span>Festival & pameran tematik</span></li>
-            </ul>
-            <a href="javascript:void(0)" class="btn btn-get-started align-self-start" data-tempat="Panggung Utama">Sewa Sekarang</a>
+              <p>
+                Selain menikmati senja, pengunjung bisa berburu spot foto instagramable dan melakukan aktivitas olahraga ringan.
+              </p>
+              <p>
+                Tempat ini cocok untuk bersantai dan berkumpul bersama keluarga maupun teman.
+              </p>
           </div>
           <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
-            <img src="../assets/img/panggung/5-panggung.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/taman-l/3-taman-l.jpg" class="img-fluid" alt="">
           </div>
         </div><!-- Features Item -->
 
