--- a/fasilitas/ruang-pertemuan.html
+++ b/fasilitas/ruang-pertemuan.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Panggung Utama - Gedong Budaya Sabilulungan</title>
+  <title>Ruang Pertemuan - Gedong Budaya Sabilulungan</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -69,20 +69,20 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="../assets/img/panggung/1-panggung.jpg" alt="" data-aos="fade-in">
+      <img src="../assets/img/pertemuan/1-pertemuan.jpg" alt="" data-aos="fade-in">
 
       <div class="container-fluid">
         <div class="row justify-content-between align-items-center">
           <div class="col-3 d-flex justify-content-center align-items-center">
-            <a class="circle-btn" href="/fasilitas/ruang-rias">
+            <a class="circle-btn" href="/fasilitas/panggung-utama">
               <i class="bi bi-arrow-left"></i>
             </a>
           </div>
           <div class="col-6 text-center">
-            <h1 data-aos="fade-up" data-aos-delay="100">Panggung Utama</h1>
+            <h1 data-aos="fade-up" data-aos-delay="100">Ruang Pertemuan</h1>
           </div>
           <div class="col-3 d-flex justify-content-center align-items-center">
-            <a class="circle-btn" href="/fasilitas/ruang-pertemuan">
+            <a class="circle-btn" href="/fasilitas/ruang-vip">
               <i class="bi bi-arrow-right"></i>
             </a>
           </div>
@@ -95,7 +95,7 @@
       <img src="../assets/img/addon/bg-fasillity.png" alt="" class="w-100" data-aos="fade-in">
 
       <div class="d-flex justify-content-center align-items-center flex-column text-center">
-        <h1 class="text-dakr poppins fw-bold fs-1" data-aos="fade-up" data-aos-delay="100">Rp. 17.500.000</h1>
+        <h1 class="text-dakr poppins fw-bold fs-1" data-aos="fade-up" data-aos-delay="100">Rp. 3.500.000</h1>
       </div>
 
     </section>
@@ -106,35 +106,33 @@
         <div class="row gy-4 align-items-center features-item">
           <div class="col-lg-5 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
             <p>
-              Panggung utama Gedong Budaya Sabilulungan merupakan fasilitas inti yang dirancang untuk menampilkan
-              pertunjukan seni, teater, konser, seminar, dan acara budaya resmi lainnya. Dilengkapi dengan teknologi
-              pencahayaan dan tata suara profesional
+              Ruang pertemuan Gedong Budaya Sabilulungan menghadirkan kenyamanan dan fasilitas lengkap untuk berbagai
+              aktivitas formal dan komunitas. Cocok untuk organisasi, komunivtas seni, hingga pelaku usaha yang butuh
+              ruang representatif.
             </p>
           </div>
           <div class="col-lg-7 order-1 order-lg-2 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
             <div class="image-stack">
-              <img src="../assets/img/panggung/2-panggung.jpg" alt="" class="stack-front">
-              <img src="../assets/img/panggung/3-panggung.jpg" alt="" class="stack-back">
+              <img src="../assets/img/pertemuan/2-pertemuan.jpg" alt="" class="stack-front">
+              <img src="../assets/img/pertemuan/1-pertemuan.jpg" alt="" class="stack-back">
             </div>
           </div>
         </div><!-- Features Item -->
 
         <div class="row gy-4 align-items-stretch justify-content-between features-item ">
           <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
-            <img src="../assets/img/panggung/4-panggung.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/pertemuan/1-pertemuan.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
             <h3>FASILITAS & SPESIFIKASI</h3>
             <ul>
-              <li><i class="bi bi-dot"></i><span>Kapasitas ±840 orang</span></li>
-              <li><i class="bi bi-dot"></i><span>Sound System Profesional</span></li>
-              <li><i class="bi bi-dot"></i><span>Lighting Stage & Lampu Sorot 2.500</span></li>
-              <li><i class="bi bi-dot"></i><span>LED Display 6m x 11m</span></li>
-              <li><i class="bi bi-dot"></i><span>Panggung Hidrolik 1m x 2m</span></li>
-              <li><i class="bi bi-dot"></i><span>Panggung Hidrolik 1m x 2m</span></li>
-              <li><i class="bi bi-dot"></i><span>Gun Smoke</span></li>
-              <li><i class="bi bi-dot"></i><span>Meja Dorong</span></li>
-              <li><i class="bi bi-dot"></i><span>Daya Listrik 40.000 Watt</span></li>
+              <li><i class="bi bi-dot"></i><span>Kapasitas hingga 50 peserta</span></li>
+              <li><i class="bi bi-dot"></i><span>Proyektor & layar presentasi</span></li>
+              <li><i class="bi bi-dot"></i><span>Meja dan kursi ergonomis</span></li>
+              <li><i class="bi bi-dot"></i><span>Sound system & mikrofon</span></li>
+              <li><i class="bi bi-dot"></i><span>Flipchart / papan tulis</span></li>
+              <li><i class="bi bi-dot"></i><span>Wi-Fi cepat & stabil</span></li>
+              <li><i class="bi bi-dot"></i><span>AC & pencahayaan nyaman</span></li>
             </ul>
           </div>
         </div><!-- Features Item -->
@@ -143,16 +141,15 @@
           <div class="col-lg-5 d-flex justify-content-center flex-column" data-aos="fade-up">
             <h3>COCOK DIGUNAKAN UNTUK</h3>
             <ul>
-              <li><i class="bi bi-dot"></i><span>Pertunjukan seni & budaya</span></li>
-              <li><i class="bi bi-dot"></i><span>Konser musik</span></li>
-              <li><i class="bi bi-dot"></i><span>Seminar, talkshow, workshop</span></li>
-              <li><i class="bi bi-dot"></i><span>Acara korporat & peluncuran produk</span></li>
-              <li><i class="bi bi-dot"></i><span>Festival & pameran tematik</span></li>
+              <li><i class="bi bi-dot"></i><span>Rapat organisasi & komunitas</span></li>
+              <li><i class="bi bi-dot"></i><span>Workshop pelatihan & seminar kecil</span></li>
+              <li><i class="bi bi-dot"></i><span>Diskusi terbuka & forum kreatif</span></li>
+              <li><i class="bi bi-dot"></i><span>Presentasi bisnis & pitching ide</span></li>
             </ul>
-            <a href="javascript:void(0)" class="btn btn-get-started align-self-start" data-tempat="Panggung Utama">Sewa Sekarang</a>
+            <a href="javascript:void(0)" class="btn btn-get-started align-self-start" data-tempat="Ruang Pertemuan">Sewa Sekarang</a>
           </div>
           <div class="col-lg-6 d-flex align-items-center features-img-bg" data-aos="zoom-out">
-            <img src="../assets/img/panggung/5-panggung.jpg" class="img-fluid" alt="">
+            <img src="../assets/img/pertemuan/2-pertemuan.jpg" class="img-fluid" alt="">
           </div>
         </div><!-- Features Item -->
 
